--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Siglude.txt - Corrected typo when looking for a bug this version doesn't seem to have. [Muad_Dib]
 - Job\Job_Newbie.txt - Fixed incorrect answers display. [Muad_Dib]
 - Job\Job1_Magician.txt - fixed magician quest. with a few of the fixes from FouLou [Muad_Dib]
 - Town\Town_Kafra.txt - Removed cart cart rental from the coalmine npc based on information from RagnaInfo. [Muad_Dib]
