*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1862 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Kafra.txt - deleted some extra codes for merchant quest. [nestor_zulueta] 
 - Town\Town_Siglude.txt - Corrected typo when looking for a bug this version doesn't seem to have. [Muad_Dib]
 - Job\Job_Newbie.txt - Fixed incorrect answers display. [Muad_Dib]
 - Job\Job1_Magician.txt - fixed magician quest. with a few of the fixes from FouLou [Muad_Dib]
