*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1864 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Siglude.txt - Corrected one thing of the display. [Muad_Dib]
 - Job\Job2_Crusader.txt - Deleted Grand Peko Breeder due to being obsolete with Event_Rental.txt. [Muad_Dib]
 - Job\Job2_Hunter.txt - Deleted Hunter Breeder due to being obsolete with Event_Rental.txt. [Muad_Dib]
 - Job\Job2_Knight.txt - Deleted Peco breeder due to being obsolete with Event_Rental.txt. [Muad_Dib]
