--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,7 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
-- Town\Town_Siglude.txt - Corrected one thing of the display. [Muad_Dib]
+- Town\Town_Kafra.txt - Added Cart rental support for High merchant, Whitesmith and Creator. [Muad_Dib]
+- Town\Town_Siglude.txt - Corrected one thing of the conversation display. [Muad_Dib]
 - Job\Job2_Crusader.txt - Deleted Grand Peko Breeder due to being obsolete with Event_Rental.txt. [Muad_Dib]
 - Job\Job2_Hunter.txt - Deleted Hunter Breeder due to being obsolete with Event_Rental.txt. [Muad_Dib]
 - Job\Job2_Knight.txt - Deleted Peco breeder due to being obsolete with Event_Rental.txt. [Muad_Dib]
@@ -18,8 +19,8 @@
 - Town\Town_Siglude.txt - Corrected typo when looking for a bug this version doesn't seem to have. [Muad_Dib]
 - Job\Job_Newbie.txt - Fixed incorrect answers display. [Muad_Dib]
 - Job\Job1_Magician.txt - fixed magician quest. with a few of the fixes from FouLou [Muad_Dib]
-- Town\Town_Kafra.txt - Removed cart cart rental from the coalmine npc based on information from RagnaInfo. [Muad_Dib]
-- Town\Town_Kafra.txt - Relocated the prontera field01 npc based on information from RagnaInfo. [Muad_Dib]
+- Town\Town_Kafra.txt - Removed cart cart rental from the coalmine kafra based on information from RagnaInfo. [Muad_Dib]
+- Town\Town_Kafra.txt - Relocated the prontera field01 kafra based on information from RagnaInfo. [Muad_Dib]
 - Job\Job2_Blacksmith.txt - Complete change to blacksmith quest. [nestor_zulueta] 
 - Town\Town_Kafra.txt - Added item quest for merchant quest. [nestor_zulueta] 
 - Job\Job1_Merchant.txt - Complete change to merchant quest. [nestor_zulueta] 
