--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- GvG\npc_guardiankafra.txt - Fixed bad NPC IDs for hidden script loaders. [Colus]
 - shop\amatsu.txt - Updated Amatsu shops In preparation for Town_Amatsu.txt is finished. [Muad_Dib]
 - GvG\ - Added Cart rental support for High merchant, Whitesmith and Creator to all castles kafras. [Muad_Dib]
 - Town\Town_Kafra.txt - Added Cart rental support for High merchant, Whitesmith and Creator. [Muad_Dib]
