--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Job\Job2_Knight_quest.txt - Fixed bad NPC IDs for hidden script loaders. [Colus]
+- Quest\quest_arena_test.txt - Fixed bad NPC IDs for hidden script loaders. [Colus]
 - GvG\npc_guardiankafra.txt - Fixed bad NPC IDs for hidden script loaders. [Colus]
 - shop\amatsu.txt - Updated Amatsu shops In preparation for Town_Amatsu.txt is finished. [Muad_Dib]
 - GvG\ - Added Cart rental support for High merchant, Whitesmith and Creator to all castles kafras. [Muad_Dib]
