*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1872 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,10 +9,12 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Amatsu.txt - Replaced Town_Amatsu with a tottaly new One. [Muad_Dib]
+- Town\Town_Kafra.txt - Moved a Amatsu Kafra. [Muad_Dib]
 - Job\Job2_Knight_quest.txt - Fixed bad NPC IDs for hidden script loaders. [Colus]
 - Quest\quest_arena_test.txt - Fixed bad NPC IDs for hidden script loaders. [Colus]
 - GvG\npc_guardiankafra.txt - Fixed bad NPC IDs for hidden script loaders. [Colus]
-- shop\amatsu.txt - Updated Amatsu shops In preparation for Town_Amatsu.txt is finished. [Muad_Dib]
+- shop\amatsu.txt - Updated Amatsu shops In preparation for when Town_Amatsu.txt is finished. [Muad_Dib]
 - GvG\ - Added Cart rental support for High merchant, Whitesmith and Creator to all castles kafras. [Muad_Dib]
 - Town\Town_Kafra.txt - Added Cart rental support for High merchant, Whitesmith and Creator. [Muad_Dib]
 - Town\Town_Siglude.txt - Corrected one thing of the conversation display. [Muad_Dib]
