*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1875 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,7 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
-- Mob\field\prt_fld.txt - Updated Prontera Fields Monster Spawns [Muad_Dib]
+- Mob\field\yuno_fild.txt - Updated Yuno Fields Monster Spawns [Muad_Dib]
+- Mob\field\ama_fild.txt - Updated Amatsu Fields Monster Spawns [Muad_Dib]
+- Mob\field\prt_fild.txt - Updated Prontera Fields Monster Spawns [Muad_Dib]
 - Mob\dungeon\gld_dun.txt - Updated Guild Dungeon Monster Spawns [Muad_Dib]
 - Job\Job2_Alchemist.txt - Added a temp changer until more quest info is known. (Requested on Bugtracker) [Muad_Dib]
 - Job\Job2_Rogue.txt - Added a temp changer until more quest info is known. (Requested on Bugtracker) [Muad_Dib]
