--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Mob\field\xmass_fild.txt - Updated Lutie Fields Monster Spawns [Muad_Dib]
 - Mob\field\yuno_fild.txt - Updated Yuno Fields Monster Spawns [Muad_Dib]
 - Mob\field\ama_fild.txt - Updated Amatsu Fields Monster Spawns [Muad_Dib]
 - Mob\field\prt_fild.txt - Updated Prontera Fields Monster Spawns [Muad_Dib]
