*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1879 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Mob\field\cmd_fild.txt - Updated Comodo Fields Monster Spawns [Muad_Dib]
 - Mob\field\pay_fild.txt - Updated Payon Fields Monster Spawns [Muad_Dib]
 - Mob\field\gon_fild.txt - Updated Gon Ryun Fields Monster Spawns [Muad_Dib]
 - Mob\field\xmass_fild.txt - Updated Lutie Fields Monster Spawns [Muad_Dib]
