--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Guide.txt - added my aldebaran guide. [nestor_zulueta]
+- Town\Town_Aldebaran.txt - Remove guide. [nestor_zulueta]
 - Mob\field\cmd_fild.txt - Updated Comodo Fields Monster Spawns [Muad_Dib]
 - Mob\field\pay_fild.txt - Updated Payon Fields Monster Spawns [Muad_Dib]
 - Mob\field\gon_fild.txt - Updated Gon Ryun Fields Monster Spawns [Muad_Dib]
