*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1882 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Aldebaran.txt - Removed 2nd guide. [Muad_Dib]
 - Town\Town_Lutie.txt - Change santa's name. [nestor_zulueta]
 - Warps\npcs\Santa_Link - removed double npc. The aldebaran santa is much better. [nestor_zulueta]
 - Town\Town_Guide.txt - added my aldebaran guide. [nestor_zulueta]
