3-26-2004 <Quest\\Quest_skill> added folder
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1887 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Quest\Questskill - added new folder [nestor_zulueta]
 - Job\Job2_Wizard.txt - Complete change to Wizard quest. [nestor_zulueta] 
 - Job\Job_Super_Novice.txt - Fixed header. [Muad_Dib] 
 - Town\Town_Aldebaran.txt - Removed 2nd guide. [Muad_Dib]
