- Event\\Event_Making.txt - Correcting Cake Hat requirements. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1895 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Making.txt - Correcting Cake Hat requirements. [Tsusai]
 - Job\Job_Super_Novice.txt - Chaned some text parts. [Muad_Dib] 
 - Event\Event_Sign.txt - Added event sign. [Muad_Dib]
 - Quest\Quest_skill\Thief_Skill.txt - file added. [nestor_zulueta]
