--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- GvG\aldeg_cas0#.txt - Changed variable type for skill/guardian checks. [Tsusai]
 - Event\Event_Making.txt - Correcting Cake Hat requirements. [Tsusai]
 - Job\Job_Super_Novice.txt - Chaned some text parts. [Muad_Dib] 
 - Event\Event_Sign.txt - Added event sign. [Muad_Dib]
