*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1902 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Mob\field\mjolnir_fild.txt - Updated, reorganised Mount Mjolnir Fields Monster Spawns [Muad_Dib]
 - GvG\prtg_cas01.txt - Added a missing OnInit command to a flag. [Tsusai]
 - GvG\npc_guardiankafra.txt - Updated Header. [Tsusai]
 - Quest\Quest_skill\Thief_Skill.txt - Corrected Header NPC info. [Tsusai]
