*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1904 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Mob\field\moc_fild.txt - Updated, reorganised Morocc Fields Monster Spawns [Muad_Dib]
+- Mob\field\nif_fild.txt - added Niflheim Fields Monster Spawns [Muad_Dib]
 - Mob\field\um_fild.txt - Updated, reorganised Umbala Fields Monster Spawns [Muad_Dib]
 - Mob\field\xmas.txt - Updated, reorganised Lutie Fields Monster Spawns [Muad_Dib]
 - Mob\field\mjolnir_fild.txt - Updated, reorganised Mount Mjolnir Fields Monster Spawns [Muad_Dib]
