--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Event\Event_Making.txt - change grampa location. [nestor_zulueta]
+- Town\Town_Alberta.txt - fixed npc id of phina and added random message. [nestor_zulueta]
+- Warp\towns\Alberta.txt - fixed warp linking to young man and grampa. [nestor_zulueta]
 - Mob\field\moc_fild.txt - Updated, reorganised Morocc Fields Monster Spawns [Muad_Dib]
 - Mob\field\nif_fild.txt - added Niflheim Fields Monster Spawns [Muad_Dib]
 - Mob\field\um_fild.txt - Updated, reorganised Umbala Fields Monster Spawns [Muad_Dib]
