3-28-2004 Change phina's id and added random message, link in house in alberta fixed, grampa's location changed in event making.
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1909 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Kafra.txt - remove line l_quest to avoid error. [nestor_zulueta]
 - Event\Event_Making.txt - change grampa location. [nestor_zulueta]
 - Town\Town_Alberta.txt - fixed npc id of phina and added random message. [nestor_zulueta]
 - Warp\towns\Alberta.txt - fixed warp linking to young man and grampa. [nestor_zulueta]
