*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1911 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,19 +9,20 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- shop\yuno.txt - Added Novice Breastplate to armor dealer. [Muad_Dib]
 - Town\Town_Kafra.txt - remove line l_quest to avoid error. [nestor_zulueta]
 - Event\Event_Making.txt - change grampa location. [nestor_zulueta]
 - Town\Town_Alberta.txt - fixed npc id of phina and added random message. [nestor_zulueta]
 - Warp\towns\Alberta.txt - fixed warp linking to young man and grampa. [nestor_zulueta]
-- Mob\field\moc_fild.txt - Updated, reorganised Morocc Fields Monster Spawns [Muad_Dib]
-- Mob\field\nif_fild.txt - added Niflheim Fields Monster Spawns [Muad_Dib]
-- Mob\field\um_fild.txt - Updated, reorganised Umbala Fields Monster Spawns [Muad_Dib]
-- Mob\field\xmas.txt - Updated, reorganised Lutie Fields Monster Spawns [Muad_Dib]
-- Mob\field\mjolnir_fild.txt - Updated, reorganised Mount Mjolnir Fields Monster Spawns [Muad_Dib]
+- Mob\field\moc_fild.txt - Updated, reorganised Morocc Fields. Monster Spawns. [Muad_Dib]
+- Mob\field\nif_fild.txt - added Niflheim Fields Monster Spawns. [Muad_Dib]
+- Mob\field\um_fild.txt - Updated, reorganised Umbala Fields Monster Spawns. [Muad_Dib]
+- Mob\field\xmas.txt - Updated, reorganised Lutie Fields Monster Spawns. [Muad_Dib]
+- Mob\field\mjolnir_fild.txt - Updated, reorganised Mount Mjolnir Fields Monster Spawns. [Muad_Dib]
 - GvG\prtg_cas01.txt - Added a missing OnInit command to a flag. [Tsusai]
 - GvG\npc_guardiankafra.txt - Updated Header. [Tsusai]
 - Quest\Quest_skill\Thief_Skill.txt - Corrected Header NPC info. [Tsusai]
-- Mob\field\gef_fild.txt - Updated, reorganised Geffen Fields Monster Spawns [Muad_Dib]
+- Mob\field\gef_fild.txt - Updated, reorganised Geffen Fields Monster Spawns. [Muad_Dib]
 - GvG\gefg_cas0#.txt - Changed variable type for skill/guardian checks. [Tsusai]
 - GvG\aldeg_cas0#.txt - Changed variable type for skill/guardian checks. [Tsusai]
 - Event\Event_Making.txt - Correcting Cake Hat requirements. [Tsusai]
