*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1912 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Job\Job_Super_Novice.txt - Made a little change. [Muad_Dib] 
 - shop\yuno.txt - Added Novice Breastplate to armor dealer. [Muad_Dib]
 - Town\Town_Kafra.txt - remove line l_quest to avoid error. [nestor_zulueta]
 - Event\Event_Making.txt - change grampa location. [nestor_zulueta]
