--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,8 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Job\Job1_Merchant - added no skill left requirement. [nestor_zulueta]
+- Town\Town_Kafra.txt - made a little change on kafra on babylan island. [nestor_zulueta]
 - Job\Job_Super_Novice.txt - Made a little change. [Muad_Dib] 
 - shop\yuno.txt - Added Novice Breastplate to armor dealer. [Muad_Dib]
 - Town\Town_Kafra.txt - remove line l_quest to avoid error. [nestor_zulueta]
