- Town\\Town_Kafra.txt - added missing L_ROOT_4_1 label on cart rental. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1917 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.003
 ----------------------------------------------------------------------------------------------------
+- Town\Town_Kafra.txt - added missing L_ROOT_4_1 label on cart rental. [Tsusai]
 - Warp\other\job_sword.txt - Corrected the swordsman test warps. [Colus]
 - Job\Job1_Merchant - added no skill left requirement. [nestor_zulueta]
 - Town\Town_Kafra.txt - made a little change on kafra on babylan island. [nestor_zulueta]
