*** empty log message ***
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1919 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Warp\dungeon\lou_dun.txt - Added Louyang dungeon warps. [Muad_Dib]
+- Warp\field\lou_fild.txt - Added Louyang field warps. [Muad_Dib]
+- Warp\town\Louyang.txt - Added Louyang town warps. [Muad_Dib]
 - Changelog.txt - Added version header. [Tsusai]
 - Event\Event_Dye.txt - corrected additem syntax errors on Java Dullihan. [Tsusai]
 - Town\Town_Kafra.txt - added missing L_ROOT_4_1 label on cart rental. [Tsusai]
