- Shop\\Gonryun.txt - Added Japanese Athena shops. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@1921 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- Shop\Gonryun.txt - Added Japanese Athena shops. [Tsusai]
 - Quest\Quest_skill\Berserk.txt - fixed header. [nestor_zulueta]
 - Warp\dungeon\lou_dun.txt - Added Louyang dungeon warps. [Muad_Dib]
 - Warp\field\lou_fild.txt - Added Louyang field warps. [Muad_Dib]
