--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- npc\npc_kafra_corp.txt - file added. [nestor_zulueta]
 - Shop\Gonryun.txt - Added Japanese Athena shops. [Tsusai]
 - Quest\Quest_skill\Berserk.txt - fixed header. [nestor_zulueta]
 - Warp\dungeon\lou_dun.txt - Added Louyang dungeon warps. [Muad_Dib]
