--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,8 +9,9 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
-- Mob/dungeon/mag_dun.txt - Updated, reorganised Magma Dungeon Monster Spawns. [Muad_Dib]
-- Mob/dungeon/prt_maze_dun.txt - Updated, reorganised Prontera Maze Dungeon Monster Spawns. [Muad_Dib]
+- Quest\Quest_Skill\NPC_Novice_Skill - Turned nametag variable into item. [Tsusai]
+- Mob\dungeon\mag_dun.txt - Updated, reorganised Magma Dungeon Monster Spawns. [Muad_Dib]
+- Mob\dungeon\prt_maze_dun.txt - Updated, reorganised Prontera Maze Dungeon Monster Spawns. [Muad_Dib]
 - npc\npc_kafra_corp.txt - file added. [nestor_zulueta]
 - Shop\Gonryun.txt - Added Japanese Athena shops. [Tsusai]
 - Quest\Quest_skill\Berserk.txt - fixed header. [nestor_zulueta]
