--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -9,6 +9,7 @@
 ----------------------------------------------------------------------------------------------------
  Fusion NPC Pack - 1.004
 ----------------------------------------------------------------------------------------------------
+- GvG\payg_cas02.txt - Fixed duplicate location script header error. [Tsusai]
 - Quest\Quest_Skill\NPC_Novice_Skill - Turned nametag variable into item. [Tsusai]
 - Mob\dungeon\mag_dun.txt - Updated, reorganised Magma Dungeon Monster Spawns. [Muad_Dib]
 - Mob\dungeon\prt_maze_dun.txt - Updated, reorganised Prontera Maze Dungeon Monster Spawns. [Muad_Dib]
